# Graaf_Zeppelin

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  DOCUMENTATION.md  Dockerfile  PLAN.md  README.md  alembic.ini  atlas-controle-25apr2026.md  atlas-fase0-gedeeld-register.json  atlas-instructie-literatuur.md  docker-compose.prod.yml  docker-compose.yml  modelbouw-verkenning-v2.md  modelbouw-verkenning.md  modelbouw-zip-leeswijzer.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json
.claude/hooks/: pytest_on_stop.sh  ruff_on_python.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  security.yml
alembic/: env.py
app/: config.py  db.py  main.py
app/api/: auth.py  conversations.py  deps.py  explorations.py  graph.py  license.py  models.py  reasoning.py  releases.py  wizard.py
app/core/: audit.py  auth.py  dag_engine.py  graph_io.py  graph_models.py  guard_analyst.py  id_schema.py  key_vault.py  license_manager.py  llm_connector.py  llm_guard.py  prompt_builder.py  rate_limit.py  release_manager.py  slider_engine.py  validation.py
app/models/: __init__.py  conversation.py  daily_usage.py  exploration.py  license.py  refresh_token.py  release.py  user.py  user_api_key.py
app/templates/: base.html  dashboard.html  graph_viewer.html  home.html  license.html  login.html  reasoning.html  register.html  releases.html  wizard.html
atlas-fase0/: README.md  paths.yml  promote_reference.py
atlas-fase1/: README.md  find_shared_refs.py
data/: llm_guard_patterns.json
data/migrations/: old_to_new_ids.json
data/models/: sportdeelname graph  sportdeelname_graph.json  sportdeelname_v1.json
docs/: AUDIT.md  OPEN_VRAGEN.md  THEORETISCHE_ONDERBOUWING.md  actieplan-os.md  beveiligingsaudit-v2.md  dependency-management.md  epic_slider_qualifiers.md  id-schema.md  incident-response-plan.md  installatiehandleiding-hetzner.md  ontwikkelverhaal.md  overleg-datakoppeling.md  pentest-handleiding.md  schema-evolution.md  security-briefing.md  security-review-proces.md  server-hosting-advies.md  threat-model.md  uniforme-kenmerken-taxonomie.md  vragen beantwoord.md
examples/: example_basic.py  example_usage.py  example_visualization.py  knowledge_graph.json  utf8_test.json
graaf_zeppelin/: __init__.py  __main__.py  cli.py  converters.py  knowledge_graph.py
scripts/: check_story_status.py  convert_graph.py  create_github_issues.sh  migrate_ids.py  migrate_sqlite_to_pg.py  security_check.sh  strip_time_lag.py  validate_graph.py
src/graaf_zeppelin/: __init__.py
stories/: EPICS.md
stories/backlog/: S05-01-interventie-flow.md  S05-03-resultaatpagina.md  S05-05-dashboard-aanscherpen.md  S06-01-voorbeeldvragen.md  S06-03-antwoord-validatie.md  S06-04-sessie-geschiedenis.md  S06-05-foutafhandeling-llm.md  S07-04-eigen-llm-optie.md  S08-01-inhoudelijke-review.md  S08-02-waarde-mapping-validatie.md  S08-03-discipline-specifiek.md  S08-04-relevantie-filtering.md  S08-05-gebruikerstest.md  S09-01-api-tests-fixen.md  S09-02-core-module-tests.md  S09-03-integratietests.md  S09-04-error-handling.md  S09-05-readme-update.md  S09-06-onboarding.md  S10-01-docker.md  S10-03-monitoring.md  S10-04-export.md  S10-05-multi-model.md  S11-01-authenticatie-hardening.md  S11-02-api-bescherming.md  S11-03-autorisatie-verbeteren.md  S11-04-logging-monitoring.md  (+23 more)
tests/: test_affective_metrics.py  test_api.py  test_auth.py  test_authorization.py  test_conversions.py  test_dag_engine.py  test_graph_models.py  test_id_schema.py  test_integration.py  test_license_manager.py  test_llm_connector.py  test_llm_guard.py  test_new_features.py  test_prompt_builder.py  test_relationship_graph.py  test_release_manager.py  test_slider_engine.py  test_sprint4.py  test_validation.py  test_wizard_and_byok.py
(+64 files in other folders)
