[build-system]
# Minimale build-backend zodat `pip install -e ".[dev]"` werkt (lokaal en
# in CI). Het runtime-pakket zelf wordt hiermee editable geïnstalleerd,
# maar Dockerfile blijft op requirements.txt leunen (production-image
# bevat geen dev-deps).
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graaf-zeppelin"
version = "0.2.0"
description = "Beleidsverkenner voor sportdeelname — causaal model + LLM"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Graaf Zeppelin Contributors" }]
license = { text = "MIT" }
# Runtime-dependencies blijven in requirements.txt — Dockerfile leunt erop.
# Hier geen [project.dependencies] om dubbele bronnen te vermijden.

[tool.setuptools.packages.find]
# Alleen het app/-package distribueren; laat data/, docs/, tests/, alembic/
# en scripts/ buiten de wheel.
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",         # ook S15-01 voor de volledige testsuite
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

# ── Ruff: lint + format ──────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
# Expliciete regelkeuze zodat ruff-defaults niet stilletjes verschuiven.
# E/F = pycodestyle errors + pyflakes  (correctheid)
# I   = isort                          (import-volgorde)
# UP  = pyupgrade                      (moderne Python-syntax op 3.11)
# B   = flake8-bugbear                 (veelvoorkomende bugs)
# SIM = flake8-simplify                (leesbaarheid)
# RUF = ruff-specifieke regels
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",    # line-too-long: format regelt dit; losse strings/tabellen mogen uitsteken
    "B008",    # function call in argument defaults: FastAPI Depends()/Query() vereist dit
    "RUF001",  # ambiguous-unicode in strings: NL-typografie (bv. 0–1 met en-dash) is gewenst
    "RUF002",  # idem voor docstrings
    "RUF003",  # idem voor comments
]

[tool.ruff.lint.per-file-ignores]
# Tests mogen asserts gebruiken en hebben vaker lange fixtures/strings.
"tests/**" = ["B011", "E402"]
# Scripts zijn vaak ad-hoc; iets soepelere regels, E402 voor sys.path-prelude.
"scripts/**" = ["B008", "E402"]
# Alembic migrations zijn autogegenereerd; ruff bemoeit zich er niet mee.
"alembic/**" = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = false

# ── Mypy ────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
# Strict-scope beperkt tot `app/core/` via CLI-argument in pre-commit/CI.
# De excludes hieronder voorkomen dat een bredere run (`mypy .`) stuk loopt
# op data/, stories/, alembic-autogenerated files, etc.
exclude = [
    "^tests/",
    "^scripts/",
    "^data/",
    "^docs/",
    "^stories/",
    "^alembic/",
    "^examples/",
    "^\\.venv/",
]

[[tool.mypy.overrides]]
# networkx heeft geen goede type-stubs.
module = "networkx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# slowapi is een lichte FastAPI-wrapper zonder stubs.
module = "slowapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# defusedxml heeft optionele types-defusedxml stubs; we laten de stubs
# onverplicht om de dev-dep-list klein te houden.
module = "defusedxml.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ── Pytest ──────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
